[package]
name = "splatforge-posthac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PostHAC: hash-grid hyperprior range-coded entropy compression for converged Gaussian splat scenes."

[dependencies]
splatforge-core = { workspace = true }
byteorder       = { workspace = true }
thiserror       = { workspace = true }
constriction    = "0.4"
probability     = "0.20"

[features]
default = []
# Enable WASM-compatible builds (excludes file-system I/O).
wasm    = []

[dev-dependencies]
splatforge-ply = { workspace = true }

[[test]]
name = "interop_python"
path = "tests/interop_python.rs"

[[test]]
name = "feature_compare"
path = "tests/feature_compare.rs"

[[test]]
name = "encode_minimal"
path = "tests/encode_minimal.rs"

[[test]]
name = "encode_batches"
path = "tests/encode_batches.rs"

[[test]]
name = "find_divergence"
path = "tests/find_divergence.rs"

[[test]]
name = "round_trip_rust_native"
path = "tests/round_trip_rust_native.rs"

[[test]]
name = "full_pipeline"
path = "tests/full_pipeline.rs"
