[package]
name = "splatforge-spz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal SPZ-compatible writer and reader for SplatForge."

[dependencies]
splatforge-core = { workspace = true }
flate2 = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
