[package]
name = "splatforge-usd-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Conformance test suite for the OpenUSD 26.03 ParticleField3DGaussianSplat schema."

[lib]
path = "src/lib.rs"

[[bin]]
name = "splatforge-usd-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "splatforge-usd-fixtures"
path = "src/bin/fixtures.rs"

[dependencies]
splatforge-core = { workspace = true }
splatforge-usd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
